--- a/server/core/views/404.ejs
+++ b/server/core/views/404.ejs
@@ -13,22 +13,27 @@
 
     <%- include ('partials/header.ejs') %>
 
+    <!-- Not found section starts -->
     <div class="not-found-w container">
+        <!-- Not found content section: starts -->
         <div class="content_w">
             <div class="content"><span class="heading">We cannot find the page you are looking for.
                     <p class="heading-desc">Either way, go back or be sure to check the url, your spelling and try
                         again.</p>
             </div><a class="button" href="/">Go back to rooms</a>
         </div>
+        <!-- Not found content section: ends -->
+
+        <!-- Not found image section -->
         <div class="image_w">
             <img alt="Page Not Found" src="/images/404.png">
         </div>
+        <!-- Not found image section: ends -->
     </div>
+    <!-- Not found section ends -->
 
     <%- include ('partials/footer.ejs') %>
 
 </body>
-
-
 
 </html>
