--- a/public/css/chat.css
+++ b/public/css/chat.css
@@ -91,6 +91,7 @@ textarea {
 .img_cont_msg{
     height: 40px;
     width: 40px;
+    display: "inline-block"
 }
 .online_icon{
     position: absolute;
@@ -137,6 +138,7 @@ textarea {
     background-color: #82ccdd;
     padding: 10px;
     position: relative;
+    min-width: 220px;
 }
 .msg_cotainer_send{
     margin-top: auto;
@@ -146,20 +148,21 @@ textarea {
     background-color: #78e08f;
     padding: 10px;
     position: relative;
+    min-width: 220px;
 }
 .msg_time{
     position: absolute;
-    left: 0;
-    bottom: -15px;
-    color: rgba(255,255,255,0.5);
-    font-size: 10px;
+    left: 10px;
+    bottom: -17px;
+    color: rgba(255,255,255,0.6);
+    font-size: 12px;
 }
 .msg_time_send{
     position: absolute;
-    right:0;
-    bottom: -15px;
-    color: rgba(255,255,255,0.5);
-    font-size: 10px;
+    right:10px;
+    bottom: -17px;
+    color: rgba(255,255,255,0.6);
+    font-size: 12px;
 }
 .msg_head{
     position: relative;
@@ -243,10 +246,19 @@ textarea {
     .msg-card {
         margin-bottom: 20px !important;
     }
+    .img_cont_msg{
+        display: none;
+    }
 }
 
 @media (max-width: 919px) {
     .chat-container {
         height: 100% !important;
+    }
+    .msg_cotainer {
+        min-width: 120px;
+    }
+    .msg_cotainer_send {
+        min-width: 120px;
     }
 }
