--- a/server/core/views/chat.ejs
+++ b/server/core/views/chat.ejs
@@ -14,27 +14,28 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
         integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
 
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 </head>
 
 <body>
     <%- include ('partials/header.ejs') %>
 
+    <!-- Chat Room Container: starts -->
     <div class="rooms-w chat-container">
         <div class="row justify-content-center h-100 w-100">
             <div class="col-md-4 col-xl-3">
                 <div class="card mb-sm-3 mb-md-0 users_card">
                     <div class="card-header">
                         <div class="input-group">
-                            <input type="text" placeholder="Search Contacts..." name="" class="form-control search">
+                            <input type="text" placeholder="Search Users..." name="search" class="form-control search">
                             <div class="input-group-prepend">
                                 <span class="input-group-text search_btn"><i class="fa fa-search"></i></span>
                             </div>
                         </div>
                     </div>
                     <div class="card-body users_body">
-                        <ui class="users">
-                            <li class="active">
+                        <ul class="users">
+                            <!-- List of users will be loaded dynamically when users joins the room -->
+                            <!--<li class="active">
                                 <div class="d-flex bd-highlight">
                                     <div class="img_cont">
                                         <img src="/images/user-icon.jpeg" class="rounded-circle user_img">
@@ -77,18 +78,6 @@
                                         <span class="online_icon offline"></span>
                                     </div>
                                     <div class="user_info">
-                                        <span>Sagar 3</span>
-                                        <p>Sagar 3 left 30 mins ago</p>
-                                    </div>
-                                </div>
-                            </li>
-                            <li>
-                                <div class="d-flex bd-highlight">
-                                    <div class="img_cont">
-                                        <img src="/images/user-icon.jpeg" class="rounded-circle user_img">
-                                        <span class="online_icon offline"></span>
-                                    </div>
-                                    <div class="user_info">
                                         <span>Sagar 4</span>
                                         <p>Sagar 4 left 50 mins ago</p>
                                     </div>
@@ -105,20 +94,8 @@
                                         <p>Sagar 4 left 50 mins ago</p>
                                     </div>
                                 </div>
-                            </li>
-                            <li>
-                                <div class="d-flex bd-highlight">
-                                    <div class="img_cont">
-                                        <img src="/images/user-icon.jpeg" class="rounded-circle user_img">
-                                        <span class="online_icon offline"></span>
-                                    </div>
-                                    <div class="user_info">
-                                        <span>Sagar 4</span>
-                                        <p>Sagar 4 left 50 mins ago</p>
-                                    </div>
-                                </div>
-                            </li>
-                        </ui>
+                            </li> -->
+                        </ul>
                     </div>
                     <div class="card-footer"></div>
                 </div>
@@ -128,21 +105,22 @@
                     <div class="card-header msg_head">
                         <div class="d-flex bd-highlight justify-space-between">
                             <div class="user_info">
-                                <span class="chat-room-title">Room Name</span>
-                                <p>Seems room</p>
+                                <span class="chat-room-title"><%= room.title %></span>
+                                <p class="chat-room-users"></p>
                             </div>
                             <div class="room-control">
-                                <span class="tooltip_icon"><a href="/logout"><i class="fa fa-power-off"></i></a>
-                                <p class="tooltiptext_icon">Logout</p>
+                                <span class="tooltip_icon logout_btn"><a href="/logout"><i class="fa fa-power-off"></i></a>
+                                    <p class="tooltiptext_icon">Logout</p>
                                 </span>
                                 <span class="tooltip_icon"><a href="/rooms"><i class="fa fa-arrow-right"></i></a>
                                     <p class="tooltiptext_icon">View all rooms</p>
-                                    </span>
+                                </span>
                             </div>
                         </div>
                     </div>
                     <div class="card-body msg_card_body">
-                      <div class="d-flex justify-content-start mb-4">
+                        <!-- messages will be loaded dynamically -->
+                        <!--<div class="d-flex justify-content-start mb-4">
                             <div class="img_cont_msg">
                                 <img src="/images/user-icon.jpeg" class="rounded-circle user_img_msg">
                             </div>
@@ -159,29 +137,11 @@
                             <div class="img_cont_msg">
                                 <img src="/images/user-icon.jpeg" class="rounded-circle user_img_msg">
                             </div>
-                        </div>
-                        <div class="d-flex justify-content-start mb-4">
-                            <div class="img_cont_msg">
-                                <img src="/images/user-icon.jpeg" class="rounded-circle user_img_msg">
-                            </div>
-                            <div class="msg_cotainer">
-                                I am good too, thank you for your chat template
-                                <span class="msg_time">9:00 AM, Today</span>
-                            </div>
-                        </div>
-                        <div class="d-flex justify-content-start mb-4">
-                            <div class="img_cont_msg">
-                                <img src="/images/user-icon.jpeg" class="rounded-circle user_img_msg">
-                            </div>
-                            <div class="msg_cotainer">
-                                Bye, see you
-                                <span class="msg_time">9:12 AM, Today</span>
-                            </div>
-                        </div>
+                        </div>-->
                     </div>
                     <div class="card-footer">
                         <div class="input-group">
-                            <textarea name="" class="form-control type_msg"
+                            <textarea name="msg" class="form-control type_msg" id="type_msg_id"
                                 placeholder="Type your message..." rows="1"></textarea>
                             <div class="input-group-append">
                                 <span class="input-group-text send_btn"><i class="fa fa-location-arrow"></i></span>
@@ -192,8 +152,24 @@
             </div>
         </div>
     </div>
+    <!-- Chat Room Container: ends -->
 
     <%- include ('partials/footer.ejs') %>
+
+    <!-- Script Section starts-->
+    <script src="http://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
+    <script src="/socket.io/socket.io.js"></script>
+    <script src="/js/chat.js"></script>
+    <script>chat_room_socket_handler("<%= room.id %>", "<%= user.username %>")</script>
+
+    <script>
+        $(document).ready(function () {
+            $(".search_btn").click(function (e) {
+                e.preventDefault();
+                search_users($(".search").val(), "<%= room.id %>");
+            })
+        })
+    </script>
 
 </body>
 
