added favicon icon

--- a/server/core/views/404.ejs
+++ b/server/core/views/404.ejs
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Node-Socket.io</title>
     <link rel="stylesheet" href="/css/style.css">
+    <link rel="icon" href="/favicon/favicon.ico">
 </head>
 
 <body>
@@ -20,7 +21,7 @@
             <div class="content"><span class="heading">We cannot find the page you are looking for.
                     <p class="heading-desc">Either way, go back or be sure to check the url, your spelling and try
                         again.</p>
-            </div><a class="button" href="/">Go back to rooms</a>
+            </div><a class="button" href="/">Go back to home</a>
         </div>
         <!-- Not found content section: ends -->
 
