--- a/server/core/views/chat.ejs
+++ b/server/core/views/chat.ejs
@@ -8,6 +8,7 @@
     <title>Node-Socket.io</title>
     <link rel="stylesheet" href="/css/chat.css">
     <link rel="stylesheet" href="/css/style.css">
+    <link rel="icon" href="/favicon/favicon.ico">
 
     <link rel='stylesheet prefetch' href='https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css'>
 
