--- a/server/core/views/login.ejs
+++ b/server/core/views/login.ejs
@@ -57,7 +57,7 @@
             </div>
 
             <div class="form-label-group">
-                <input type="text" id="username_r" name="username" class="form-control" placeholder="Enter Username" required="true" autofocus>
+                <input type="text" id="username_r" name="username" class="form-control" placeholder="Enter Username" required="true" autofocus minlength="5" maxlength="50">
                 <label for="username">Username</label>
             </div>
 
