--- a/server/core/views/partials/footer.ejs
+++ b/server/core/views/partials/footer.ejs
@@ -2,8 +2,10 @@
 
     <!-- Footer container section: starts -->
     <div class="footer-container container">
-        <div class="">
-
+        <div>
+            <a href="https://github.com/sagarvasa" target="_blank" class="links">
+                <span class="link-text">Visit Github Profile</span>
+            </a>
         </div>
     </div>
     <!-- Footer container section: ends -->
